# varro_plugin

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  INSTALL.md  README.md  TODO.md  pytest.ini
.agents/plugins/: marketplace.json
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
notes/: design.md  distribution.md  index.md  skills.md
server/: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
server/agents/: architecture.md  dev.md  index.md  notebooks.md
server/tests/: test_notebook_persistence.py  test_param_type.py  test_parser_components.py
server/varro/: cli.py  constants.py  main.py  notebook.py  shell.py  sql.py  utils.py
server/varro/dashboard/: __init__.py  components.py  executor.py  filters.py  helpers.py  loader.py  models.py  parser.py  queries.py  server.py  snapshot.py  tables.py
server/varro/dashboard/static/: dashboard.css
skills/dashboards/: SKILL.md  authoring.md  snapshots.md  viewing.md
skills/jupyter/: SKILL.md
skills/sql/: SKILL.md  connection.md
skills/workflow/: SKILL.md
test_sample/dashboards/: index.md
test_sample/dashboards/titanic/: dashboard.md  outputs.py
