[project]
name = "varro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.12.0",
    "jinja2>=3.1.0",
    "matplotlib>=3.10.8",
    "mcp[cli]>=1.27.0",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "python-fasthtml>=0.12.0",
    "kaleido>=1.0.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "pyarrow>=18.0.0",
    "logfire>=4.32.1",
    "sqlalchemy>=2.0",
]

[project.scripts]
varro = "varro.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["varro"]
