[project]
name = "varro-mcp"
version = "0.1.0"
description = "SQL, persistent Jupyter, and markdown dashboard tooling for Codex."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "josca42" },
]
keywords = ["mcp", "sql", "jupyter", "dashboards", "data-analysis"]
dependencies = [
    "ipython>=9.12.0",
    "jinja2>=3.1.0",
    "matplotlib>=3.10.8",
    "mcp[cli]>=1.27.0",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "python-fasthtml>=0.12.0",
    "kaleido>=1.0.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "pyarrow>=18.0.0",
    "logfire>=4.32.1",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.3.4",
    "scikit-learn>=1.8.0",
    "geopandas>=1.1.3",
    "tabulate>=0.10.0",
    "openpyxl>=3.1.5",
]

[project.scripts]
varro = "varro.cli:main"
varro-mcp = "varro.main:main"

[project.urls]
Homepage = "https://github.com/josca42/varro_plugin"
Repository = "https://github.com/josca42/varro_plugin"
Issues = "https://github.com/josca42/varro_plugin/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["varro"]

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "pyproject.toml",
    "varro/**/*.py",
    "varro/dashboard/static/**/*",
]
